# Celestialsim_C-GL

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CMakeLists_test.txt  IMPLEMENTATION_STATUS.md  README.md  REFACTORING_ANALYSIS.md  build.bat  imgui.ini  run.bat  setup.bat  test_barneshut.cpp  test_force_direction.cpp  vcpkg.json
include/core/: Application.h  Body.h  CircularTrail.h  Particle.h  ParticleSystem.h
include/initialization/: GalaxyInitializer.h  ParticleSystemInitializer.h  SphereInitializer.h
include/physics/: BarnesHut.h  GPUPhysicsSolver.h  IParticleSolver.h  PhysicsEngine.h  PhysicsSolver.h
include/rendering/: BloomRenderer.h  ComputeShader.h  Renderer.h  Renderer_fixed.h
include/ui/: EnhancedUIManager.h  UIManager.h
shaders/: body.frag  body.vert  force.frag  grid.frag  particle.frag  particle.vert  quadtree.frag  quadtree.vert  trail.frag  trail.vert
shaders/compute/: force_calculation.comp  integration.comp
src/: main.cpp
src/core/: Application.cpp  Body.cpp  CircularTrail.cpp  Particle.cpp  ParticleSystem.cpp
src/initialization/: GalaxyInitializer.cpp  ParticleSystemInitializer.cpp
src/physics/: BarnesHut.cpp  BarnesHut_backup.cpp  GPUPhysicsSolver.cpp  IParticleSolver.cpp  PhysicsEngine.cpp
src/rendering/: ComputeShader.cpp  Renderer.cpp
src/ui/: UIManager.cpp
